--- a/turismo.html
+++ b/turismo.html
@@ -12,44 +12,140 @@
 
 	<div class="row">
 
-		<div class="col s12 blue lighten-2">
+		<div class="container">
 
-				<ul>
-					<li><a class="waves-effect waves-light btn blue darken-4"><i class="material-icons right">brightness_1</i>Inicio</a></li>
-					<li><a class="waves-effect waves-light btn blue darken-4"><i class="material-icons right">pin_drop</i>Estuve en..</a></li>
-					<li><a class="waves-effect waves-light btn blue darken-4"><i class="material-icons right">grade</i>Buenos viajes</a></li>
-					<li><a class="waves-effect waves-light btn blue darken-4"><i class="material-icons right">comment</i>Recomendaciones</a></li>
-				</ul>
+			<div class="right-align col s12 blue lighten-2">
+				<a class="waves-effect waves-light btn blue darken-4 rr"><i class="material-icons right">brightness_1</i>Inicio</a>
+				<a class="waves-effect waves-light btn blue darken-4 rr"><i class="material-icons right">pin_drop</i>Estuve en..</a>
+				<a class="waves-effect waves-light btn blue darken-4 rr"><i class="material-icons right">grade</i>Buenos viajes</a>
+				<a class="waves-effect waves-light btn blue darken-4 rr"><i class="material-icons right">comment</i>Recomendaciones</a>
 			</div>
 		
 
+			<div class="col s12 blue lighten-2">
+				<h4 class="white-text center-align"><em>CREANDO MI PROPIO CAMINO</em></h4>
+			</div>
 
-		<div class="col s12 blue lighten-2">
-			<h4 class="white-text valign center-align"><em>CREANDO MI PROPIO CAMINO</em></h4>
 		</div>
-		 
+
 	</div>
-<img src="img/1.jpg" class="responsive-img">
+
+<ul>
+	<li><a href="#"><img src="img/f.png" class="cuerpo"></a></li>
+	<li><a href="#"><img src="img/t.png" class="cuerpo"></a></li>
+	<li><a href="#"><img src="img/i.png" class="cuerpo"></a></li>
+	<li><a href="#"><img src="img/p.png" class="cuerpo"></a></li>
+	<li><a href="#"><img src="img/g.png" class="cuerpo"></a></li>
+	<li><a href="#"><img src="img/y.png" class="cuerpo"></a></li>
+</ul>
+
 
 	<div class="row">
-		
-		<div class="col s4" style="background-color: red">
-			<div class="card-content">
-						<img src="img/1.jpg" class="responsive-img">
-			</div>
-		</div>
-		<div class="col s4" style="background-color: green">
-			<div class="card-content">
-						<img src="img/1.jpg" class="responsive-img circle">
-			</div>
-		</div>
-		<div class="col s4" style="background-color: white">
-			<div class="card-content">
-						<img src="img/1.jpg" class="responsive-img">
-			</div>
-		</div>
+			
+		<div class="container">
+			<div class="col s-12">
 
-	</div>		
+		<div class="col s4">
+			<div class="card-content  center-align">
+						<img src="img/1.jpg" style="width: 500px" class="responsive-img">
+						<img src="img/3.jpg" style="width: 500px" class="responsive-img">
+			</div>
+		</div>
+		<div class="col s4">
+			<div class="card-content  center-align">
+						<img src="img/2.jpg" class="responsive-img" style="height: 600px">
+			</div>
+		</div>
+		<div class="col s4">
+			<div class="card-content  center-align">
+						<img src="img/4.jpg" style="width: 500px" class="responsive-img">
+						<img src="img/5.jpg" style="width: 500px" class="responsive-img">
+			</div>
+		</div>
+</div>
+	</div>	
+	</div>	
+
+
+
+
+	<div class="row">
+		<div class="container">
+			<div class="col s-12">
+				
+				<div class="col s9"  style="background-color: white">
+
+		<img src="img/6.jpg" class="responsive-img left img6">
+
+		<h3 class="left-align"> El acuario</h3>
+		<h6 class="chip">12 de marzo de 2015 <i class="material-icons right">assignment</i></h6>
+		<h6 class="chip">Quito, Cr 35 # 72 <i class="material-icons right">pin_drop</i></h6>
+
+		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<br>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	</div>
+
+
+<!--Aqui en adelante es donde esta la imagen redoda-->
+
+				<div class="col s3"  style="background-color: red">
+
+		<img src="img/pp.jpg" class="responsive-img circle ">
+		<hr>
+		<h4 class="center-align">Perfil del autor</h4>
+		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	</div>
+	</div>
+	</div>
+	</div>
+
+<div class="container">
+	<div class="row blue lighten-2 tt">
+		<br>
+		<h6>Deja tu comentario:</h6>
+		<br>
+	<form>
+		<div class="row">
+			<div class="col s6">
+		<i class="material-icons left">assignment</i><label class="white-text">Nombre:</label>
+		<input type="text" name="nombre"/>
+</div>
+
+<div class="col s6">
+	
+		<i class="material-icons left">emailt</i><label class="white-text">Correo Electrónico:</label>
+		<input type="text" name="nombre"/>
+</div></div>
+<br>
+		<i class="material-icons left">comment</i><label class="white-text">Comentario:</label>
+		<input type="text" name="nombre"/>
+
+
+		<button class="button primary right tt">ENVIAR</button>
+	</form>
+</div>
+</div>
+
+</div>
+</div>
+</div>
+
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
