--- a/turismo.html
+++ b/turismo.html
@@ -30,33 +30,36 @@
 
 	</div>
 
-<ul>
-	<li><a href="#"><img src="img/f.png" class="cuerpo"></a></li>
-	<li><a href="#"><img src="img/t.png" class="cuerpo"></a></li>
-	<li><a href="#"><img src="img/i.png" class="cuerpo"></a></li>
-	<li><a href="#"><img src="img/p.png" class="cuerpo"></a></li>
-	<li><a href="#"><img src="img/g.png" class="cuerpo"></a></li>
-	<li><a href="#"><img src="img/y.png" class="cuerpo"></a></li>
-</ul>
+ <div class="row">
+        <div class="col hide-on-small-only m1">
+            <ul>
+                <li><a href="#"><img src="img/f.png" class="cuerpo"></a></li>
+                <li><a href="#"><img src="img/t.png" class="cuerpo"></a></li>
+                <li><a href="#"><img src="img/i.png" class="cuerpo"></a></li>
+                <li><a href="#"><img src="img/p.png" class="cuerpo"></a></li>
+                <li><a href="#"><img src="img/g.png" class="cuerpo"></a></li>
+                <li><a href="#"><img src="img/y.png" class="cuerpo"></a></li>
+            </ul>
+        </div>
 
-
-	<div class="row">
+<div class="row">
 			
 		<div class="container">
-			<div class="col s-12">
 
-		<div class="col s4">
+			<div class="col s11 ">
+
+		<div class="col s12 m4">
 			<div class="card-content  center-align">
 						<img src="img/1.jpg" style="width: 500px" class="responsive-img">
 						<img src="img/3.jpg" style="width: 500px" class="responsive-img">
 			</div>
 		</div>
-		<div class="col s4">
+		<div class="col s12 m4">
 			<div class="card-content  center-align">
 						<img src="img/2.jpg" class="responsive-img" style="height: 600px">
 			</div>
 		</div>
-		<div class="col s4">
+		<div class="col s12 m4">
 			<div class="card-content  center-align">
 						<img src="img/4.jpg" style="width: 500px" class="responsive-img">
 						<img src="img/5.jpg" style="width: 500px" class="responsive-img">
@@ -64,6 +67,7 @@
 		</div>
 </div>
 	</div>	
+</div>
 	</div>	
 
 
@@ -73,7 +77,7 @@
 		<div class="container">
 			<div class="col s-12">
 				
-				<div class="col s9"  style="background-color: white">
+				<div class="col s12 m9"  style="background-color: white">
 
 		<img src="img/6.jpg" class="responsive-img left img6">
 
@@ -99,7 +103,7 @@
 
 <!--Aqui en adelante es donde esta la imagen redoda-->
 
-				<div class="col s3"  style="background-color: red">
+				<div class="col s12 m3"  style="background-color: red">
 
 		<img src="img/pp.jpg" class="responsive-img circle ">
 		<hr>
@@ -118,7 +122,7 @@
 <div class="container">
 	<div class="row blue lighten-2 tt">
 		<br>
-		<h6>Deja tu comentario:</h6>
+		<h6 class="white-text rt"> Deja tu comentario:</h6>
 		<br>
 	<form>
 		<div class="row">
@@ -133,7 +137,7 @@
 		<input type="text" name="nombre"/>
 </div></div>
 <br>
-		<i class="material-icons left">comment</i><label class="white-text">Comentario:</label>
+		<i class="material-icons left rt">comment</i><label class="white-text">Comentario:</label>
 		<input type="text" name="nombre"/>
 
 
