--- a/turismo.html
+++ b/turismo.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 
-	<div class="row">
+	<div class="row blue lighten-2 estatic">
 
-		<div class="container">
+		<div class="container" style="background-color: gray">
 
-			<div class="right-align col s12 blue lighten-2">
+			<div class="right-align col s12 ">
 				<a class="waves-effect waves-light btn blue darken-4 rr"><i class="material-icons right">brightness_1</i>Inicio</a>
 				<a class="waves-effect waves-light btn blue darken-4 rr"><i class="material-icons right">pin_drop</i>Estuve en..</a>
 				<a class="waves-effect waves-light btn blue darken-4 rr"><i class="material-icons right">grade</i>Buenos viajes</a>
@@ -22,7 +22,7 @@
 			</div>
 		
 
-			<div class="col s12 blue lighten-2">
+			<div class="col s12 ">
 				<h4 class="white-text center-align"><em>CREANDO MI PROPIO CAMINO</em></h4>
 			</div>
 
